# MELT_ENGINE2D

./: CMakeLists.txt  Engine.cpp  EntityComponent.cpp  EntityInspector.cpp  EntityManager.cpp  EntitySystem.cpp  InputManager.cpp  README.md  SceneManager.cpp  Sprite.cpp  Tile.cpp  TileEditor.cpp  TileGrid.cpp  TileSpriteSheetInfo.cpp  main.cpp
include/: Engine.h  EntityComponent.h  EntityInspector.h  EntityManager.h  EntityRegistry.h  EntitySystem.h  InputManager.h  SceneManager.h  Sprite.h  Tile.h  TileEditor.h  TileGrid.h  TileSpriteSheetInfo.h  Timer.h  Utility.h
savefiles/: ProjectSettings.yaml  SceneA.yaml
